[gd_scene load_steps=9 format=3 uid="uid://cjgeldnx4mjto"]

[ext_resource type="Script" uid="uid://41ck1w1wbom" path="res://scenes/main_menu/main_menu.gd" id="1_wem23"]
[ext_resource type="Texture2D" uid="uid://8whrnklra26o" path="res://scenes/main_menu/Menu.png" id="2_3ovsr"]
[ext_resource type="Texture2D" uid="uid://cew3ykycko1o4" path="res://textures/icons/start.png" id="3_5seab"]
[ext_resource type="Texture2D" uid="uid://514quwxayc6b" path="res://textures/icons/settings.png" id="4_4xg86"]
[ext_resource type="Texture2D" uid="uid://dbiwq8a2bmjoa" path="res://textures/icons/exit.png" id="5_thkx5"]

[sub_resource type="Animation" id="Animation_xm72b"]
resource_name = "Loading"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.053321064, 1.1920929e-07, 0.35305244, 1), Color(0.012169078, 6.617978e-08, 0.15978763, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -659), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_62v7d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.053321064, 1.1920929e-07, 0.35305244, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -659)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hx6c7"]
_data = {
&"Loading": SubResource("Animation_xm72b"),
&"RESET": SubResource("Animation_62v7d")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wem23")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="ColorRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_3ovsr")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Start" type="Button" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 11
icon = ExtResource("3_5seab")

[node name="Options" type="Button" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_4xg86")

[node name="Quit" type="Button" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_thkx5")

[node name="CutScenes" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hx6c7")
}

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -659.0
offset_bottom = -659.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.053321064, 1.1920929e-07, 0.35305244, 1)

[connection signal="pressed" from="AspectRatioContainer/MarginContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MarginContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
